@@ -1,74 +1,70 @@
-# Red-Black Tree Implementation
+Here’s the updated `README.md` for your **Java-based Red-Black Tree with JavaFX visualization**:  
 
-## Overview
+---
 
-This project provides an implementation of a **Red-Black Tree**, a self-balancing binary search tree. Red-Black Trees ensure that the tree remains balanced, resulting in efficient operations for insertion, deletion, and search, with a time complexity of **O(log n)**.
+# Red-Black Tree Implementation  
 
-## Features
+## Overview  
 
-- Insertion of elements while maintaining the Red-Black Tree properties
-- Deletion of elements with rebalancing
-- Searching for a specific element
-- Traversal operations (in-order, pre-order, post-order)
-- Visualization of the tree structure
+This project provides an implementation of a **Red-Black Tree**, a self-balancing binary search tree, written in **Java**. The Red-Black Tree ensures that the tree remains balanced, resulting in efficient operations for insertion, deletion, and search with a time complexity of **O(log n)**.  
 
-## Technologies Used
+Additionally, this implementation includes a **JavaFX-based graphical visualization**, allowing users to interact with the tree dynamically.  
 
-- **Language:** C++
-- **Development Tools:** GCC, Clang, or any C++ compiler
-- **Data Structures:** Binary Search Trees, Red-Black Tree balancing techniques
+## Features  
 
-## Getting Started
+- **Insertion** of elements while maintaining the Red-Black Tree properties  
+- **Deletion** of elements with automatic rebalancing  
+- **Searching** for a specific element  
+- **Tree Traversals** (in-order, pre-order, post-order)  
+- **Graphical Visualization** using **JavaFX** for an interactive experience  
 
-### Prerequisites
+## Getting Started  
 
-Ensure you have a C++ compiler installed. You can use:
+### Prerequisites  
 
-- GCC: `sudo apt install g++` (Linux)
-- Clang: `brew install llvm` (macOS)
-- MSVC: Installed with Visual Studio (Windows)
+Ensure you have the following installed:  
 
-### Installation
+- **Java Development Kit (JDK 11 or later)**  
+- **JavaFX SDK** (included in newer JDKs or available separately)  
+- **An IDE** such as IntelliJ IDEA, Eclipse, or NetBeans (recommended for JavaFX development)  
 
-1. Clone the repository:
+### Installation  
+
+1. Clone the repository:  
    ```sh
    git clone https://github.com/mahajialirezaei/RedBlackTree.git
-   ```
-2. Navigate to the project directory:
+   ```  
+2. Open the project in your IDE.  
+3. Ensure JavaFX libraries are correctly configured in the project settings.  
+4. Compile and run the project:  
    ```sh
-   cd RedBlackTree
-   ```
-3. Compile the project:
-   ```sh
-   g++ -o red_black_tree main.cpp RedBlackTree.cpp
-   ```
-4. Run the executable:
-   ```sh
-   ./red_black_tree
-   ```
+   javac -d out --module-path <path-to-javafx-lib> --add-modules javafx.controls,javafx.fxml *.java
+   java --module-path <path-to-javafx-lib> --add-modules javafx.controls,javafx.fxml -cp out Main
+   ```  
+   *(Replace `<path-to-javafx-lib>` with the actual JavaFX SDK path.)*  
 
-## Usage
+## Usage  
 
-Once the program is running, you can:
+Once the application is running, you can:  
 
-- Insert elements by providing input when prompted.
-- Delete elements from the tree.
-- Search for a specific element.
-- View the tree structure using traversal methods.
+- Insert elements by entering values in the graphical interface.  
+- Delete elements from the tree dynamically.  
+- Search for a specific element.  
+- View the tree structure visually with dynamic updates.  
 
-## Red-Black Tree Properties
+## Red-Black Tree Properties  
 
-The tree follows these essential properties:
+The tree maintains the following properties:  
 
-1. Every node is either **red** or **black**.
-2. The **root** node is always **black**.
-3. **Red** nodes cannot have **red** children (no two consecutive red nodes).
-4. Every path from a node to its descendant **NULL** nodes must have the same number of **black** nodes.
+1. Every node is either **red** or **black**.  
+2. The **root** node is always **black**.  
+3. **Red** nodes cannot have **red** children (no two consecutive red nodes).  
+4. Every path from a node to its descendant **NULL** nodes must have the same number of **black** nodes.  
 
-## Example
+## Example (Java Implementation)  
 
-```cpp
-RedBlackTree tree;
+```java
+RedBlackTree tree = new RedBlackTree();
 tree.insert(10);
 tree.insert(20);
 tree.insert(30);
@@ -76,17 +72,15 @@ tree.insert(15);
 tree.display();
 ```
 
-This will insert elements into the tree while maintaining the Red-Black properties and display the tree structure.
+This inserts elements into the tree while maintaining Red-Black properties and displays the tree structure.  
 
-## Contributing
+## Contributing  
 
-Contributions are welcome! Feel free to submit issues or pull requests to improve this implementation.
+Contributions are welcome! Feel free to submit issues or pull requests to improve the implementation.  
 
-## License
 
-This project is open-source and available under the MIT License.
+## Author  
 
-## Author
+[Mahaji Alirezaei](https://github.com/mahajialirezaei)  
 
-[Mahaji Alirezaei](https://github.com/mahajialirezaei)
-
+---
